# conneXt

./: CMakeLists(generate datatypes and nodesets).txt  CMakeLists(separate datatypes and nodesets).txt  CMakeLists.txt  SensorCap.py  bruh  client.c  error_message.txt  full_output.txt  main-old.c  main-stable.c  main.c  makefile  mqtt_client  mqtt_client.c  mqtt_client_stable.c  myServer  myServer.c  myServer.h
Design.v104/: BuiltInTypes.xml  DemoModel.csv  DemoModel.xml  MDIS.csv  MDIS.xml  MTConnectModel.csv  MTConnectModel.xml  OpcUaAdiModel.xml  OpcUaDiModel.xml  OpcUaFdiPart5Model.csv  OpcUaFdiPart5Model.xml  OpcUaFdiPart7Model.csv  OpcUaFdiPart7Model.xml  OpcUaGdsModel.csv  OpcUaGdsModel.xml  OpcUaPLCopenModel.csv  OpcUaPLCopenModel.xml  OpcUaRoboticsModel.xml  SercosModel.csv  SercosModel.xml  StandardTypes.csv  StandardTypes.xml  UA Attributes.xml  UA Core Services.xml  UA Defined Types.xml  UA ServerCapabilities.csv  UA Status Codes.xml  UNECE_to_OPCUA.csv
Model/: Model.csv  Opc.Ua.Ff.Classes.cs  Opc.Ua.Ff.Constants.cs  Opc.Ua.Ff.DataTypes.cs  Opc.Ua.Ff.NodeSet2.xml  Opc.Ua.Ff.PredefinedNodes.uanodes  Opc.Ua.Ff.PredefinedNodes.xml  Opc.Ua.Ff.Types.bsd
NodeSets/DI/: Opc.Ua.Di.Classes.cs  Opc.Ua.Di.Constants.cs  Opc.Ua.Di.DataTypes.cs  Opc.Ua.Di.NodeIds.csv  Opc.Ua.Di.NodeSet.xml  (+5 more)
model/: Model.csv  Model.xml  Opc.Ua.Ff.Constants.cs  Opc.Ua.Ff.NodeSet.xml  Opc.Ua.Ff.NodeSet2.xml  Opc.Ua.Ff.PredefinedNodes.uanodes  Opc.Ua.Ff.Types.bsd  Opc.Ua.Ff.Types.xsd  OpcUaFfModel.csv  OpcUaFfModel.xml
model_mvi/: Opc.Ua.Mvi.NodeSet2.xml
server/: CMakeLists.txt
(+82 files in other folders)
